welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:-6: error: Missing closing brace `}' assumed here
try {
^indexOfMaxValue:1: error: expected class or object definition
def indexOfMaxValue(nums:Array[Int]):Int = {
^